# jetbrains-copr

./: .gitignore  README.md  pyproject.toml
.github/workflows/: check.yml  manual-build.yml
config/: products.json
docs/: OPERATIONS.md
packaging/: jetbrains-rpm.spec.j2
src/jetbrains_copr/: __init__.py  cli.py  config.py  copr.py  errors.py  github_release.py  http.py  jetbrains_api.py  models.py  orchestrator.py  repository.py  rpm.py  state.py  util.py
state/: versions.json
tests/: test_config.py  test_copr.py  test_github_release.py  test_jetbrains_api.py  test_orchestrator.py  test_repository.py  test_rpm.py  test_state.py  test_util.py
